# Hardcore2D

./: .gitignore  README.md  analyze_project.bat  config.hle  make_project.bat  make_project.sh
source/: App.cpp  App.h  CMakeLists.txt  GameConstants.h  IService.h  InputHandler.h  Main.cpp  Main.h  OldMain.cpp  SDLCommon.h  ServiceLocator.h  TypeTraits.h
source/build_utilities/: FindSDL2.cmake  FindSDL2_mixer.cmake  setup-win32.py
source/commands/: DamageEntityCommand.cpp  DamageEntityCommand.h  EntityMeleeAttackCommand.cpp  EntityMeleeAttackCommand.h  EntityRangedShurikenAttackCommand.cpp  EntityRangedShurikenAttackCommand.h  FlameBreathAttackCommand.cpp  FlameBreathAttackCommand.h  ICommand.h  MoveEntityByCustomVelocityCommand.cpp  MoveEntityByCustomVelocityCommand.h  SetAngularVelocityCommand.cpp  SetAngularVelocityCommand.h  SetEntityCustomVelocityCommand.cpp  SetEntityCustomVelocityCommand.h  SetEntityFacingDirectionCommand.cpp  SetEntityFacingDirectionCommand.h  SetEntityMovementVelocityCommand.cpp  SetEntityMovementVelocityCommand.h  SetEntityVelocityAndAnimateCommand.cpp  SetEntityVelocityAndAnimateCommand.h  SetEntityVelocityCommand.cpp  SetEntityVelocityCommand.h  SetFacingDirectionCommand.cpp  SetFacingDirectionCommand.h  SetVelocityAndAnimateCommand.cpp  SetVelocityAndAnimateCommand.h  SetVelocityCommand.cpp  SetVelocityCommand.h
source/components/: AnimationComponent.cpp  AnimationComponent.h  BasicNinjaEnemyAIComponent.cpp  BasicNinjaEnemyAIComponent.h  BloodDropAIComponent.cpp  BloodDropAIComponent.h  CastingFlameBreathOnlyEnemyAIComponent.cpp  CastingFlameBreathOnlyEnemyAIComponent.h  DamageComponent.cpp  DamageComponent.h  DummyComponent.h  EntityComponentManager.h  FactionComponent.cpp  FactionComponent.h  FlameBreathAIComponent.cpp  FlameBreathAIComponent.h  HealthComponent.cpp  HealthComponent.h  HorizontalMovingPlatformAIComponent.cpp  HorizontalMovingPlatformAIComponent.h  IAIComponent.h  IComponent.h  LightSamuraiAIComponent.cpp  LightSamuraiAIComponent.h  MeleeSwingAIComponent.cpp  MeleeSwingAIComponent.h  MovingPlatformAIComponent.cpp  MovingPlatformAIComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  RangedShurikenAIComponent.cpp  RangedShurikenAIComponent.h  ShaderComponent.cpp  ShaderComponent.h  TransformComponent.cpp  TransformComponent.h  TransformationComponent.cpp  TransformationComponent.h  VerticalMovingPlatformAIComponent.cpp  VerticalMovingPlatformAIComponent.h
source/controllers/: AIService.cpp  AIService.h  PlayerController.cpp  PlayerController.h  PlayerInputController.cpp  PlayerInputController.h
source/engine/: CoreEngineService.cpp  CoreEngineService.h  CoreRenderingService.cpp  CoreRenderingService.h  Shader.cpp  Shader.h
source/events/: AnnouncePlayerEntityIdEvent.cpp  AnnouncePlayerEntityIdEvent.h  BaseEventCommunicator.cpp  BaseEventCommunicator.h  CameraShakeRequestEvent.cpp  CameraShakeRequestEvent.h  DebugToggleHitboxDisplayEvent.cpp  DebugToggleHitboxDisplayEvent.h  DebugToggleSceneGraphDisplayEvent.h  EntityCollisionEvent.cpp  EntityCollisionEvent.h  EntityDamagedEvent.cpp  EntityDamagedEvent.h  IEvent.h  (+20 more)
(+96 files in other folders)
